--- a/style.css
+++ b/style.css
@@ -16,7 +16,38 @@ h3{
     font-size: 20px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     color: red;
+  
     
+}
+h3:hover{
+    font-size: 20px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    color: blue;
+  
+    
+}
+#timer{
+  border: 2px solid rgb(5, 4, 4);
+  background-color: #c0eed4;
+  margin-top: 10px;
+  height: 30px;
+  width: 75px;
+  display: flex;
+  align-items: center;
+  margin: 10px 1px 0 auto;
+  justify-content: end;
+  font-size: 24px;  
+}
+.time{
+  display: flex;  
+  margin-top: 20px;
+  height: auto;
+  width: 120px;
+  align-items: center;
+  margin: 10px 1px 0 auto;
+  justify-content:space-between;
+  background-color: #fdfdfd;
+
 }
 .name{
     text-decoration: none;
@@ -73,25 +104,30 @@ h3{
 
    
 }
+
 #next-btn{
     background: #001e4d;
     color: #fff;
     font-weight: 500;
     width: 200px;
     height: 40px;
-    display: block;
+    display: none;
     border: 0;
     padding: 10px;
     margin: 20px 0 0 auto;
     border-radius: 4px;
     cursor: url('https://cur.cursors-4u.net/nature/nat-10/nat927.png'), pointer;
+    
+    
 }
+
 .correct{
     background: #9aeabc;
 }
 .incorrect{
     background: #ff9393;
 }
+
 /* Responsive*/
 @media screen and (max-width: 600px) {
     .app {
